# timetablebot

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AiHandler.py  ClassProcessor.py  Database.py  Dockerfile  Makefile  Pipfile  README.md  SheetScraper.py  actualizer.py  alembic.ini  config.py  cron.py  crontab  docker-compose.yml  local.yml  main.py  prod.yml  pyproject.toml  run_telegram_bot.py  run_vk_bot.py  setup.cfg  test.py
Assets/: Constants.py  Filters.py  Keyboards.py  Strings.py  spreadsheet_id  spreadsheet_id.txt  spreadsheet_lastupdatetime
alembic/: env.py
alembic/versions/: 0cdc72413cb6_init.py  3b9252b28f45_add_users_count.py
app/: AiHandler.py  Catchup.py  ClassProcessor.py  SheetScraper.py  base_request_client.py  config.py  fsm.py  main.py  routines.py  send_update.py  singleton.py  utils.py
app/Assets/: Filters.py  Keyboards.py  Strings.py
app/frontend/: singletons.py
app/request_clients/: backend_client.py  base.py
app/vk_bot/: actualizer_utils.py  bots.py  defaults.py  driver.py  error_handlers.py  middlewares.py  states.py  storages.py
deploy/: .env.example  crontab  local.yml  prod.yml
migrations/: env.py
migrations/versions/: 1a0f38175529_removed_redundant_tables.py  4900652dabea_added_new_table_hyperlinks.py  4bca217e879f_users_fix.py  4f72d02d8422_logging.py  5cc9083db9b7_deleted_tables_classes_and_hyperlinks.py  5f2e53bab951_updated_type_string_to_text_in_class.py  (+8 more)
refactor/: base.py  utils.py
timetable-infra/: .env.prod  Dockerfile  crontab  dev.docker-compose.yml  gunicorn_config.py  prod.docker-compose.yml
(+260 files in other folders)
