[tool.poetry]
name = "timetablebot"
version = "0.1.0"
description = ""
authors = ["Neykuratick <neykuratick@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gspread = "^5.1.1"
google-api-python-client = "^2.34.0"
vkwave = "0.2.13"
vk-api = "^11.9.7"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
asyncpg = "^0.25.0"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
